--- a/index.html
+++ b/index.html
@@ -1,120 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>My Portfolio</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="My Portfolio" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://chacrit-p.github.io" />
-    <meta property="og:image" content="/public/assets/logo.jpg" />
-    <meta
-      property="og:description"
-      content="Welcome to my portfolio website! This is a simple and clean
-      portfolio showcasing my work and projects."
-    />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/public/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/public/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/public/favicon-16x16.png"
-    />
-    <link rel="manifest" href="/public/site.webmanifest" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.7/dist/full.min.css"
-      rel="stylesheet"
-      type="text/css"
-    />
+<head>
+  <title>My Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="My Portfolio" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://chacrit-p.github.io" />
+  <meta property="og:image" content="/public/assets/logo.jpg" />
+  <meta property="og:description" content="Welcome to my portfolio website! This is a simple and clean
+      portfolio showcasing my work and projects." />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#ffffff" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png" />
+  <link rel="manifest" href="/public/site.webmanifest" />
 
-    <link rel="stylesheet" href="style.css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body>
-    <main
-      data-theme="light"
-      class="antialiased min-h-screen bg-base-100 text-base-content font-mono"
-    >
-      <section
-        class="container max-w-5xl mx-auto p-6 xl:px-0 flex items-center w-full pt-24"
-      >
-        <div class="flex flex-col-reverse lg:flex-row gap-10 lg:gap-0 justify-between items-center w-full">
-          <div class="flex flex-col justify-center h-80">
-            <div class="flex gap-2 mb-4">
-              <span class="badge bg-base-200"> CIS student </span>
-              <span class="badge bg-base-200"> Frontend Dev </span>
-              <span class="badge bg-base-200"> Backend Dev </span>
-            </div>
-            <h1 class="text-5xl mb-3">Hi I'm Chacrit Poonpipit</h1>
-            <p class="max-w-xl mb-4">
-              Welcome to my portfolio website! This is a simple and clean
-              portfolio showcasing my work and projects. The website is built
-              using HTML and styled with Tailwind CSS.
-            </p>
-            <div class="flex gap-5 mb-7">
-              <div class="tooltip tooltip-bottom" data-tip="my github">
-                <a target="_blank" href="https://github.com/chacrit-p">
-                  <svg
-                    class="size-7 stroke-secondary text-base-100 hover:text-base-content hover:stroke-none transition"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    fill="currentColor"
-                    viewBox="0 0 24 24"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M12.006 2a9.847 9.847 0 0 0-6.484 2.44 10.32 10.32 0 0 0-3.393 6.17 10.48 10.48 0 0 0 1.317 6.955 10.045 10.045 0 0 0 5.4 4.418c.504.095.683-.223.683-.494 0-.245-.01-1.052-.014-1.908-2.78.62-3.366-1.21-3.366-1.21a2.711 2.711 0 0 0-1.11-1.5c-.907-.637.07-.621.07-.621.317.044.62.163.885.346.266.183.487.426.647.71.135.253.318.476.538.655a2.079 2.079 0 0 0 2.37.196c.045-.52.27-1.006.635-1.37-2.219-.259-4.554-1.138-4.554-5.07a4.022 4.022 0 0 1 1.031-2.75 3.77 3.77 0 0 1 .096-2.713s.839-.275 2.749 1.05a9.26 9.26 0 0 1 5.004 0c1.906-1.325 2.74-1.05 2.74-1.05.37.858.406 1.828.101 2.713a4.017 4.017 0 0 1 1.029 2.75c0 3.939-2.339 4.805-4.564 5.058a2.471 2.471 0 0 1 .679 1.897c0 1.372-.012 2.477-.012 2.814 0 .272.18.592.687.492a10.05 10.05 0 0 0 5.388-4.421 10.473 10.473 0 0 0 1.313-6.948 10.32 10.32 0 0 0-3.39-6.165A9.847 9.847 0 0 0 12.007 2Z"
-                      clip-rule="evenodd"
-                    /></svg
-                ></a>
-              </div>
-              <div class="tooltip tooltip-bottom" data-tip="my email">
-                <a target="_blank" href="mailto:chacrit.p@kkumail.com">
-                  <svg
-                    class="size-7 stroke-secondary text-base-100 hover:text-base-content hover:stroke-none transition"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    fill="currentColor"
-                    viewBox="0 0 24 24"
-                  >
-                    <path
-                      d="M2.038 5.61A2.01 2.01 0 0 0 2 6v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6c0-.12-.01-.238-.03-.352l-.866.65-7.89 6.032a2 2 0 0 1-2.429 0L2.884 6.288l-.846-.677Z"
-                    />
-                    <path
-                      d="M20.677 4.117A1.996 1.996 0 0 0 20 4H4c-.225 0-.44.037-.642.105l.758.607L12 10.742 19.9 4.7l.777-.583Z"
-                    />
-                  </svg>
-                </a>
-              </div>
-            </div>
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.7/dist/full.min.css" rel="stylesheet" type="text/css" />
+
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
+<body>
+  <main data-theme="light" class="antialiased min-h-screen bg-base-100 text-base-content font-mono">
+    <section class="container max-w-5xl mx-auto p-6 xl:px-0 flex items-center w-full pt-24">
+      <div class="flex flex-col-reverse lg:flex-row gap-10 lg:gap-0 justify-between items-center w-full">
+        <div class="flex flex-col justify-center h-80">
+          <div class="flex gap-2 mb-4">
+            <span class="badge bg-base-200"> CIS student </span>
+            <span class="badge bg-base-200"> Frontend Dev </span>
+            <span class="badge bg-base-200"> Backend Dev </span>
           </div>
-          <div class="flex justify-end">
-            <div class="avatar">
-              <div class="w-80 rounded-full shadow-xl">
-                <img src="/public/assets/images/nagi.gif" alt="nagi" />
-              </div>
+          <h1 class="text-5xl mb-3">Hi I'm Chacrit Poonpipit</h1>
+          <p class="max-w-xl mb-4">
+            Welcome to my portfolio website! This is a simple and clean
+            portfolio showcasing my work and projects. The website is built
+            using HTML and styled with Tailwind CSS.
+          </p>
+          <div class="flex gap-5 mb-7">
+            <div class="tooltip tooltip-bottom" data-tip="my github">
+              <a target="_blank" href="https://github.com/chacrit-p">
+                <svg class="size-7 stroke-secondary text-base-100 hover:text-base-content hover:stroke-none transition"
+                  aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                  viewBox="0 0 24 24">
+                  <path fill-rule="evenodd"
+                    d="M12.006 2a9.847 9.847 0 0 0-6.484 2.44 10.32 10.32 0 0 0-3.393 6.17 10.48 10.48 0 0 0 1.317 6.955 10.045 10.045 0 0 0 5.4 4.418c.504.095.683-.223.683-.494 0-.245-.01-1.052-.014-1.908-2.78.62-3.366-1.21-3.366-1.21a2.711 2.711 0 0 0-1.11-1.5c-.907-.637.07-.621.07-.621.317.044.62.163.885.346.266.183.487.426.647.71.135.253.318.476.538.655a2.079 2.079 0 0 0 2.37.196c.045-.52.27-1.006.635-1.37-2.219-.259-4.554-1.138-4.554-5.07a4.022 4.022 0 0 1 1.031-2.75 3.77 3.77 0 0 1 .096-2.713s.839-.275 2.749 1.05a9.26 9.26 0 0 1 5.004 0c1.906-1.325 2.74-1.05 2.74-1.05.37.858.406 1.828.101 2.713a4.017 4.017 0 0 1 1.029 2.75c0 3.939-2.339 4.805-4.564 5.058a2.471 2.471 0 0 1 .679 1.897c0 1.372-.012 2.477-.012 2.814 0 .272.18.592.687.492a10.05 10.05 0 0 0 5.388-4.421 10.473 10.473 0 0 0 1.313-6.948 10.32 10.32 0 0 0-3.39-6.165A9.847 9.847 0 0 0 12.007 2Z"
+                    clip-rule="evenodd" />
+                </svg></a>
+            </div>
+            <div class="tooltip tooltip-bottom" data-tip="my email">
+              <a target="_blank" href="mailto:chacrit.p@kkumail.com">
+                <svg class="size-7 stroke-secondary text-base-100 hover:text-base-content hover:stroke-none transition"
+                  aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                  viewBox="0 0 24 24">
+                  <path
+                    d="M2.038 5.61A2.01 2.01 0 0 0 2 6v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6c0-.12-.01-.238-.03-.352l-.866.65-7.89 6.032a2 2 0 0 1-2.429 0L2.884 6.288l-.846-.677Z" />
+                  <path
+                    d="M20.677 4.117A1.996 1.996 0 0 0 20 4H4c-.225 0-.44.037-.642.105l.758.607L12 10.742 19.9 4.7l.777-.583Z" />
+                </svg>
+              </a>
             </div>
           </div>
         </div>
-      </section>
-      <section id="work" class="container max-w-5xl mx-auto"></section>
-    </main>
-  </body>
+        <div class="flex justify-end">
+          <div class="avatar">
+            <div class="w-80 rounded-full shadow-xl">
+              <img src="/public/assets/images/nagi.gif" alt="nagi" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="work" class="container max-w-5xl mx-auto mt-10">
+      <h1 class="text-3xl font-semibold mb-5">
+        My Projects
+      </h1>
+      <ul class="list list-inside list-decimal space-y-3">
+        <li>
+          <a class="link" href="/projects/todo/index.html">Todo App</a>
+        </li>
+        <li>
+          <a class="link" href="/projects/pokemon/index.html">Pokemon Lab</a>
+        </li>
+      </ul>
+    </section>
+  </main>
+</body>
+
 </html>
