--- a/projects/pokemon/index.html
+++ b/projects/pokemon/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rest Api</title>
+    <title> Pokemon Lab
+    </title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -29,7 +30,7 @@
             const div = document.createElement("div");
             div.className = "flex flex-col items-center p-3 rounded-box shadow-xl gap-4 border";
             div.innerHTML = `
-            <img class="w-[70px] h-[70px]" src="${img_src}" alt="${pokemon.name}">
+            <img class="w-[60px] h-[60px] object-cover" src="${img_src}" alt="${pokemon.name}">
             <span class="capitalize text-lg font-semibold">
                 ${pokemon.name}
             </span>
