--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <span class="badge bg-base-200"> Frontend Dev </span>
             <span class="badge bg-base-200"> Backend Dev </span>
           </div>
-          <h1 class="text-5xl mb-3">Hi I'm Chacrit Poonpipit</h1>
+          <h1 class="text-5xl font-bold mb-3">Hi I'm Chacrit Poonpipit</h1>
           <p class="max-w-xl mb-4">
             Welcome to my portfolio website! This is a simple and clean
             portfolio showcasing my work and projects. The website is built
