--- a/projects/pokemon/index.html
+++ b/projects/pokemon/index.html
@@ -18,7 +18,7 @@
             Pokemon Lab
         </h1>
 
-        <div class="grid grid-cols-4 gap-5 mt-8" id="pokemon-lists">
+        <div class="grid grid-cols-5 gap-5 mt-8" id="pokemon-lists">
         </div>
     </div>
 
@@ -27,10 +27,11 @@
 
         function createPokemonCard(pokemon) {
             const img_src = pokemon.data.sprites.other.showdown.front_default
-            const div = document.createElement("div");
-            div.className = "flex flex-col items-center p-3 rounded-box shadow-xl gap-4 border";
+            const div = document.createElement("a");
+            div.href = 'detail/index.html?name=' + pokemon.name
+            div.className = "hover:bg-base-300 flex flex-col items-center p-3 rounded-box shadow-xl gap-4 border";
             div.innerHTML = `
-            <img class="w-[60px] h-[60px] object-cover" src="${img_src}" alt="${pokemon.name}">
+            <img class="w-[45px] h-[45px]" src="${img_src}" alt="${pokemon.name}">
             <span class="capitalize text-lg font-semibold">
                 ${pokemon.name}
             </span>
