--- a/projects/pokemon/detail/index.html
+++ b/projects/pokemon/detail/index.html
@@ -14,16 +14,25 @@
 
 <body>
     <div class="container p-10 mx-auto">
-        <div class=" bg-base-100 w-96 shadow-xl rounded-box p-6 mx-auto">
-            <img class="h-[200px] mx-auto" id="image" />
-            <h2 id="title" class="text-center"></h2>
+        <div id="pokemon">
+
         </div>
     </div>
 
     <script>
+        const pokemonDiv = document.getElementById("pokemon");
 
-        const title = document.getElementById('title')
-        const image = document.getElementById('image')
+        function createPokemonCard(pokemon) {
+            const div = document.createElement("div");
+
+            const name = `<p>Name: ${pokemon.name}</p>`;
+            const abilities = `<p>Abilities: ${pokemon.abilities.map(ability => ability.ability.name).join(', ')}</p>`;
+            const image = `<img src="${pokemon.sprites.front_default}" alt="${pokemon.name}" style="width: 100px; height: 100px;">`; // Adjust width and height as needed
+            const type = `<p>Type: ${pokemon.types.map(type => type.type.name).join(', ')}</p>`;
+
+            div.innerHTML = name + abilities + image + type;
+            pokemonDiv.appendChild(div);
+        }
 
         function getUrlParameter(name) {
             const queryString = window.location.search;
@@ -37,11 +46,8 @@
         axios.get(url)
             .then((res) => {
                 const pokemon = res.data
-
                 document.title = pokemon.name
-                title.innerHTML = pokemon.name
-
-                image.src = pokemon.sprites.front_default
+                createPokemonCard(pokemon)
             })
             .catch((err) => {
                 console.log(err);
