--- a/projects/pokemon/index.html
+++ b/projects/pokemon/index.html
@@ -1,77 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Pokemon Lab
-    </title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PokeApi</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
+  </head>
 
-<body>
-    <div class="container p-10 mx-auto">
+  <body>
+    <div class="container py-10 mx-auto">
+      <img
+        class="mx-auto"
+        src="/public/assets/images/pokeapi.png"
+        alt="pokeapi"
+      />
+      <p class="mx-auto max-w-lg text-center mt-5 text-lg p-3 md:p-0">
+        All the Pokémon data you'll ever need in one place, easily accessible
+        through a modern free open-source RESTful API.
+      </p>
+      <div
+        id="pokemon-lists"
+        class="grid grid-cols-2 md:grid-cols-4 xl:grid-cols-5 gap-2 md:gap-3 lg:gap-4 py-10"
+      ></div>
 
-        <h1 class="text-3xl font-semibold">
-            Pokemon Lab
-        </h1>
-
-        <div class="grid grid-cols-5 gap-5 mt-8" id="pokemon-lists">
-        </div>
+      <div class="flex justify-between px-10">
+        <button id="previous" class="btn" type="button">Previous</button>
+        <button id="next" class="btn" type="button">Next</button>
+      </div>
     </div>
 
     <script>
-        const pokemonLists = document.getElementById("pokemon-lists");
+      const pokemonLists = document.getElementById("pokemon-lists");
+      const nextButton = document.getElementById("next");
+      const previousButton = document.getElementById("previous");
 
-        function createPokemonCard(pokemon) {
-            const img_src = pokemon.data.sprites.other.showdown.front_default
-            const div = document.createElement("a");
-            div.href = 'detail/index.html?name=' + pokemon.name
-            div.className = "hover:bg-base-300 flex flex-col items-center p-3 rounded-box shadow-xl gap-4 border";
-            div.innerHTML = `
-            <img class="w-[45px] h-[45px]" src="${img_src}" alt="${pokemon.name}">
-            <span class="capitalize text-lg font-semibold">
-                ${pokemon.name}
-            </span>
-            `;
-            pokemonLists.appendChild(div);
-        }
+      let pokemons = null;
+      let next = null;
+      let previous = null;
 
-        axios.get("https://pokeapi.co/api/v2/pokemon")
+      nextButton.addEventListener("click", () => {
+        getPokemons(next);
+      });
+
+      previousButton.addEventListener("click", () => {
+        getPokemons(previous);
+      });
+
+      const setPokemons = (value) => {
+        pokemons = value;
+        pokemonLists.innerHTML = "";
+        pokemons.forEach((pokemon) => {
+          const div = document.createElement("div");
+          div.className =
+            "bg-base-100 p-4 rounded-box border border-base-300 shadow-xl flex flex-col items-center";
+          const h2 = document.createElement("h2");
+          h2.className = "text-lg font-semibold capitalize text-center";
+          const img = document.createElement("img");
+          img.className = "loading loading-spinner loading-md";
+
+          const a = document.createElement("a");
+          a.className = "link link-primary";
+          a.href = `./detail/index.html?name=${pokemon.name.toLowerCase()}`;
+
+          div.appendChild(h2);
+          div.appendChild(img);
+          div.appendChild(a);
+          pokemonLists.appendChild(div);
+          axios
+            .get(pokemon.url)
             .then((res) => {
-                const pokemons = res.data.results;
-
-                const pokemonPromises = pokemons.map((pokemon) => {
-                    return axios.get(pokemon.url)
-                        .then((res) => {
-                            pokemon.data = res.data;
-                            return pokemon;
-                        })
-                        .catch((err) => {
-                            console.log(err);
-                            return null;
-                        });
-                });
-
-                Promise.all(pokemonPromises)
-                    .then((detailedPokemons) => {
-                        const validPokemons = detailedPokemons.filter(pokemon => pokemon !== null);
-
-                        validPokemons.forEach((pokemon) => {
-                            createPokemonCard(pokemon);
-                        });
-                    })
-                    .catch((err) => {
-                        console.log(err);
-                    });
+              pokemon = res.data;
+              h2.innerHTML = pokemon.name;
+              img.className = "";
+              img.src = pokemon.sprites.front_default;
+              a.innerHTML = "more details";
             })
             .catch((err) => {
-                console.log(err);
+              console.log(err);
             });
+        });
+      };
 
+      const setNext = (url) => {
+        next = url;
+        nextButton.disabled = false;
+        if (next == null) {
+          nextButton.disabled = true;
+        }
+      };
+
+      const setPrevious = (url) => {
+        previous = url;
+        previousButton.disabled = false;
+        if (previous == null) {
+          previousButton.disabled = true;
+        }
+      };
+
+      const getPokemons = (url) => {
+        axios
+          .get(url)
+          .then((res) => {
+            setPrevious(res.data.previous);
+            setNext(res.data.next);
+            setPokemons(res.data.results);
+          })
+          .catch((err) => {
+            console.log(err);
+          });
+      };
+
+      getPokemons("https://pokeapi.co/api/v2/pokemon?offset=0&limit=20");
     </script>
-</body>
-
+  </body>
 </html>
