--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="dracula" lang="en">
+<html data-theme="dark" lang="en">
   <head>
     <title>My Portfolio</title>
     <meta charset="UTF-8" />
@@ -56,7 +56,7 @@
   </style>
   <body>
     <main class="antialiased bg-base-100 text-base-content">
-      <section class="max-w-4xl mx-auto w-full p-3 md:p-0 md:mt-10">
+      <section class="max-w-4xl mx-auto w-full p-3 xl:p-0 md:mt-10">
         <div class="flex flex-col items-center gap-5 md:gap-7">
           <div class="avatar">
             <div class="w-56 rounded-sm shadow-xl">
